# Ner-Ai-Project

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  evaluate.py  postprocess.py  preprocess.py  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: ci.yml
data_utils/: balanced_data.py  convert_conll_to_csv.py  count_labels.py  filter_csv.py  gen_w_faker.py  generate_fake_tc_num.py  openai_bio_generator.py
raw_data/: balanced_dev_dataset.csv  balanced_test_dataset.csv  balanced_train_dataset.csv  train.csv
templates/: index.html
tests/: test_postprocess.py  test_tc_generation.py
