[project]
name = "ner-ai-project"
version = "1.0.0"
description = "Turkish Named-Entity Recognition with fine-tuned BERT + AI text generation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nur Yağmur Tuncer" }]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"data_utils/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".", "data_utils"]
